feat: fiche detail resto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.aston.guide">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.listing.ListingActivity"></activity>
+        <activity android:name=".ui.Fiche.FicheActivity"></activity>
+        <activity android:name=".ui.FicheActivity" />
+        <activity android:name=".ui.listing.ListingActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity
             android:name=".ui.main.MainActivity"
