--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    // Mapbox -> affichage fiche resto
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.0.1'
     // volley: requete http
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
     // picasso: afficher une image
